End of Section 19

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db",
     "IdentityConnection": "Data source=identity.db",
-    "Redis": "localhost"
+    "Redis": "localhost, abortConnect=false"
   },
   "Token": {
     "Key": "super secret key",
